--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             autocomplete="one-time-code"
             placeholder="Enter 6 digit OTP"
           />
+          <button class="btn" type="submit">submit</button>
         </form>
       </div>
     </div>
