--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <div class="section">
-      <div class="section-center">
-        <form>
-          <h3>OTP:</h3>
-          <input
-            type="number"
-            inputmode="numeric"
-            name="otp"
-            min="1"
-            onKeyPress="if(this.value.length==6) return false"
-            autocomplete="one-time-code"
-            placeholder="Enter 6 digit OTP"
-          />
-          <button class="btn" type="submit">submit</button>
-        </form>
+    <iframe src="https://webotp.verify.netlify.app/" allow="otp-credentials">
+      <div class="section">
+        <div class="section-center">
+          <form>
+            <h3>OTP:</h3>
+            <input
+              type="number"
+              inputmode="numeric"
+              name="otp"
+              min="1"
+              onKeyPress="if(this.value.length==6) return false"
+              autocomplete="one-time-code"
+              placeholder="Enter 6 digit OTP"
+            />
+            <button class="btn" type="submit">submit</button>
+          </form>
+        </div>
       </div>
-    </div>
+    </iframe>
   </body>
 </html>
