--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <iframe src="https://webotp.verify.netlify.app/" allow="otp-credentials">
+    <iframe
+      src="https://webotp.verify.netlify.app/iframe"
+      allow="otp-credentials"
+    >
       <div class="section">
         <div class="section-center">
           <form>
